Fix layout on mobile

--- a/home.css
+++ b/home.css
@@ -1,7 +1,13 @@
 .container {
     width: 70%;
     margin: 0 auto;
+}
 
+@media (max-width: 640px) {
+    .container {
+        width: auto;
+        margin: 0 10px;
+    }
 }
 
 #header h1 {
